// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running "projen" with no arguments will execute .projenrc.js 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes             	linguist-generated
/.github/workflows/stale.yml	linguist-generated
/.gitignore                 	linguist-generated
/.projen/**                 	linguist-generated
/.projen/deps.json          	linguist-generated
/.projen/tasks.json         	linguist-generated",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "clobber": Object {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
    },
  },
  ".projenrc.js": "new (require('projen').Project)({ name: 'foo' }).synth()",
  "README.md": "# replace this",
}
`;

exports[`the "--rc" option can be used to specify projenrc location 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes             	linguist-generated
/.github/workflows/stale.yml	linguist-generated
/.gitignore                 	linguist-generated
/.projen/**                 	linguist-generated
/.projen/deps.json          	linguist-generated
/.projen/tasks.json         	linguist-generated",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "clobber": Object {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;
